--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -250,6 +250,11 @@ padding: 1.5rem;
 flex-grow: 1;
 }
 
+.card-header {
+    display: flex;
+    justify-content: space-around;
+}
+
 .card-title {
 font-size: 1.25rem;
 font-weight: 600;
