--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -47,7 +47,7 @@
                         <i class="fas fa-eye"></i>
                         View
                     </button>
-                    <form th:if="${todoList.id != null}" th:action="@{/lists/{id}/delete(id=${todoList.id})}" method="post" style="display: inline;">
+                    <form th:if="${todoList.id != null}" th:action="@{/templates/pages/lists/{id}/delete(id=${todoList.id})}" method="post" style="display: inline;">
                         <button type="submit" class="btn btn-outline-danger btn-sm"
                                 onclick="return confirmDelete('Are you sure you want to delete this todo list?')">
                             <i class="fas fa-trash"></i>
@@ -63,7 +63,7 @@
 <!-- Create Todo List Modal -->
 <div class="modal" id="createListModal">
     <div class="modal-dialog">
-        <form th:action="@{/lists}" th:object="${newTodoList}" method="post">
+        <form th:action="@{/templates/pages/lists}" th:object="${newTodoList}" method="post">
             <div class="modal-header">
                 <h5 class="modal-title">Create New Todo List</h5>
                 <button type="button" class="btn-close" onclick="closeModal('createListModal')">&times;</button>
