--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/style.css}" />
     <link rel="stylesheet" th:href="@{/css/fab.css}" />
+    <link rel="stylesheet" th:href="@{/css/dropdown.css}" />
 </head>
 
 <div th:fragment="container" class="container main-container"></div>
