--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -14,10 +14,23 @@
                 <i class="fas fa-list"></i>
                 Todo Lists
             </h1>
-            <a th:href="@{/lists/new}" class="btn btn-primary">
-                <i class="fas fa-plus"></i>
-                New List
-            </a>
+            <div class="create-dropdown">
+                <div class="btn btn-primary create-btn">
+                    <i class="fas fa-plus"></i>
+                    Create New
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+                <div class="dropdown-content">
+                    <a th:href="@{/lists/new}" class="dropdown-item">
+                        <i class="fas fa-list"></i>
+                        Todo List
+                    </a>
+                    <a th:href="@{/notes/new}" class="dropdown-item">
+                        <i class="fas fa-sticky-note"></i>
+                        Note
+                    </a>
+                </div>
+            </div>
         </div>
 
         <!-- No Items Message -->
